# cw-contract-template

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  client.sh  rustfmt.toml  state.json
builds/build-1676155221/: cw_contract.wasm
builds/build-test/: tx
builds/build-test/contracts/: sqvu9qp
examples/: deploy.rs  schema.rs
src/: contract.rs  error.rs  interface.rs  lib.rs  msg.rs  responses.rs  state.rs
src/execute/: do_something.rs  mod.rs  set_config.rs  transfer_ownership.rs
src/query/: config.rs  get_something.rs  mod.rs  select.rs
src/state/: mod.rs  models.rs  storage.rs
