[package]
name = "cw-contract"
version = "0.0.1"
authors = []
edition = "2021"
description = "Smart Contract"
license = "Apache-2.0"
repository = ""
homepage = ""
documentation = ""

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[dependencies]
cw-utils = { version = "1.0.3" }
cw2 = { version = "1.1.2" }
cw20 = { version = "1.1.2" }
cw-storage-plus = { version = "1.2.0" }
cosmwasm-schema = { version = "1.5.2" }
cosmwasm-std = { version = "1.5.2" }
schemars = "0.8.16"
serde = { version = "1.0.196", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.56" }

[dev-dependencies]
cw-multi-test = { version = "0.20.0" }
